--- a/css/style.css
+++ b/css/style.css
@@ -281,3 +281,25 @@
                 width: 300px;
             }
         }
+.map-responsive {
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%; /* Proporción 16:9 */
+    height: 0;
+    overflow: hidden;
+    border-radius: 10px; /* Opcional */
+}
+
+.map-responsive iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+#chatbotBody {
+    height: 350px;      /* ajustable */
+    overflow-y: auto;   /* scroll interno */
+    padding: 10px;
+}
